syntax = "proto3";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

package shop;

option go_package = ".;shop";

message ProductResponse {
    string title = 1;
    bool favorite = 2;
    float price = 3;
    int64 count = 4;
    string image = 5;
    message Vote {
        string name = 1;
        string text = 2;
    }
    repeated Vote vote = 6;
}

message ListProductsResponse {
    repeated ProductResponse products = 1;
}

message ProductRequest {
    int32 id = 1;
}

service Shop {
    rpc GetProduct (ProductRequest) returns (ProductResponse) {
        option (google.api.http) = {
            get: "/product/{id}"
        };
    }
    rpc ListProducts (google.protobuf.Empty) returns (ListProductsResponse) {
        option (google.api.http) = {
            get: "/products"
        };
    }
}